slack slash command

--- a/docs/Slack Slash Command.ipynb
+++ b/docs/Slack Slash Command.ipynb
@@ -75,19 +75,19 @@
     "\n",
     "[`Create your Slack app`](https://api.slack.com/apps/new)\n",
     "\n",
-    "![ssc1](../image/ssc1.png)\n",
+    "![ssc1](../image/ssc/ssc1.png)\n",
     "\n",
     "* Click on Create an App button then one popup will come.\n",
     "\n",
-    "![ssc2](../image/ssc2.png)\n",
+    "![ssc2](../image/ssc/ssc2.png)\n",
     "\n",
     "* Choose `From scratch` option. Again one more popup will come.\n",
     "\n",
-    "![ssc3](../image/ssc3.png)\n",
+    "![ssc3](../image/ssc/ssc3.png)\n",
     "\n",
     "* Enter the app name and Pick a workspace to develop your app and click `Create App` button.\n",
     "\n",
-    "![ssc4](../image/ssc4.png)"
+    "![ssc4](../image/ssc/ssc4.png)"
    ]
   },
   {
@@ -99,15 +99,15 @@
     "\n",
     "* Click the `Incoming Webhooks` feature in the navigation menu and turn on the Activate Incoming Webhooks.\n",
     "\n",
-    "![ssc5](../image/ssc5.png)\n",
+    "![ssc5](../image/ssc/ssc5.png)\n",
     "\n",
     "* Click the `Install App` settings in the navigation menu. \n",
     "\n",
-    "![ssc6](../image/ssc6.png)\n",
+    "![ssc6](../image/ssc/ssc6.png)\n",
     "\n",
     "* Click `Install to workspace` you will redirect to the another page and give the permission to access your app by selecting the channel name or username.\n",
     "\n",
-    "![ssc7](../image/ssc7.png)"
+    "![ssc7](../image/ssc/ssc7.png)"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "\n",
     "When the `response_type` is `in_channel`, both the response message and the initial Slash Command typed by the user will be shared in the channel:\n",
     "\n",
-    "![ssc8](../image/ssc8.png)"
+    "![ssc8](../image/ssc/ssc8.png)"
    ]
   }
  ],
