--- a/docs/Celery.ipynb
+++ b/docs/Celery.ipynb
@@ -63,6 +63,24 @@
     "\n",
     "* If the task result wasn't immediately available when the user made the initial request, and the application decided to send a response without waiting for the task, the user might make subsequent requests to fetch the result. The final response, containing the task result, is sent to the user."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "162c6f4a",
+   "metadata": {},
+   "source": [
+    "## Message Broker\n",
+    "\n",
+    "* In Celery, a message broker is a crucial component that acts as an intermediary between the Celery client (the application that sends tasks) and the Celery workers (the processes that execute the tasks).\n",
+    "\n",
+    "* It facilitates communication by passing messages containing task information from the client to the workets.\n",
+    "\n",
+    "* When a task is enqueued in Celery, the message broker receives the task message and stores it in a queue.\n",
+    "\n",
+    "* The primary functions of a message broker in Celery are Message Queueing, Task Distribution and Commuincation Channel.\n",
+    "\n",
+    "* Popular Message Brokers supported by Celery are RabbitMQ, Redis and Amazon Simple Queue Service(SQS)."
+   ]
   }
  ],
  "metadata": {
