--- a/docs/Celery.ipynb
+++ b/docs/Celery.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162c6f4a",
+   "id": "6510a13f",
    "metadata": {},
    "source": [
     "## Message Broker\n",
@@ -80,6 +80,68 @@
     "* The primary functions of a message broker in Celery are Message Queueing, Task Distribution and Commuincation Channel.\n",
     "\n",
     "* Popular Message Brokers supported by Celery are RabbitMQ, Redis and Amazon Simple Queue Service(SQS)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3db315a",
+   "metadata": {},
+   "source": [
+    "## Celery Worker\n",
+    "\n",
+    "* In celery, a worker is a process that performs the actual execution of tasks.\n",
+    "\n",
+    "* It is one of the core components of the Celery distributed task queue system.\n",
+    "\n",
+    "* When you enqueue a task in Celery, it is sent to the worker processes, where the task is executed asynchronously in the background.\n",
+    "\n",
+    "* Functionalities of Celery workers are Task Execution, Concurrency, Dynamic Scaling, Task Acknowledgement, Result Handling, task Priority and Error Reporting.\n",
+    "\n",
+    "* When you start a Celery worker process, it continuously listens to the message broker for incoming tasks. As soon as a task is enqueued in the message queue, the worker picks up the task and executes it. The process is repeated as long as the worker is running.\n",
+    "\n",
+    "* `celery -A project_name worker -l INFO` - It is used to start worker process for testing and development."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbfba345",
+   "metadata": {},
+   "source": [
+    "## Celery Worker Process\n",
+    "\n",
+    "* A worker process, in the context of Celery, refers to and independent and concurrent process that executes tasks asynchronously.\n",
+    "\n",
+    "* When you start a Celery worker, it creates one or more worker processes to handle incoming tasks from the message broker.\n",
+    "\n",
+    "* Each worker process operates independently and can execute tasks concurrently with other worker processes.\n",
+    "\n",
+    "* These worker processes are responsible for processing the tasks that are enqueued in the Celery message queue by the Celery client (your application) and the Celery Beat scheduler.\n",
+    "\n",
+    "* By carefully managing worker processes and their concurrency, you can optimize the performance and resource utilization of your Celery application."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2508fff9",
+   "metadata": {},
+   "source": [
+    "## Determine Number of Process/ Concurrency\n",
+    "\n",
+    "* The number of processes a Celery worker can have depends on your system's resources and how you configure the worker.\n",
+    "\n",
+    "* It is usually recommended to set the concurrency level equal to or slightly lower than the number of CPU cores.\n",
+    "\n",
+    "* In some situations, you might want to have more worker processes than CPU cores, especially when your tasks are primarily I/O-bound tasks (e.g., making API calls, accessing databases, reading/writing files). It is also an area where you can utilize thread pool.\n",
+    "\n",
+    "* In situations where your tasks are predominantly CPU-bound (e.g., heavy computations, complex algorithms), it is generally more meaningful to have equal or fewer worker processes than the number of CPU cores. It is also an area where you can utilize multi process pool.\n",
+    "\n",
+    "* `celery -A project-name worker -l INFO --concurrecny=6`\n",
+    "\n",
+    "* The --concurrency option allows you to specify the number of worker processes or threads that should run concurrently to process tasks.\n",
+    "\n",
+    "* It sets the level of concurrency for the Celery worker.\n",
+    "\n",
+    "* If you use the --concurrency option without specifying a --pool, Celery will use the default Prefork pool."
    ]
   }
  ],
