--- a/docs/Docker.ipynb
+++ b/docs/Docker.ipynb
@@ -151,6 +151,130 @@
     "\n",
     "Virtual machine are more isolated, require a separate OS, take longer to start, and have direct hardware access."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6a3f2a8",
+   "metadata": {},
+   "source": [
+    "## What is Docker Volume\n",
+    "\n",
+    "* Docker volume is a feature provided by Docker that allows you to manage persisent data in Docker containers.\n",
+    "\n",
+    "* When a Conatiner is created and started, it generally runs in an isolated environment with its own file system.\n",
+    "\n",
+    "* However, any data stored within the container is typically non-persistent, meaning it will be lost when the container is stopped or removed.\n",
+    "\n",
+    "* Docker Volumes provide a way to overcome this limitation by allowing you to create a separate storage area that can be shared between containers or between a container and the host system.\n",
+    "\n",
+    "* Volumes provide a mechanism for storing and managing data separately from the container itself, ensuring that the data persists even if the container is stopped or deleted.\n",
+    "\n",
+    "* A Docker Volume is essentially a directory or a mount point located outside the container's file system, which is mapped to a specific path within the container.\n",
+    "\n",
+    "* This mapping enables the container to read from or write to the volume as if it were a regular directory within the container.\n",
+    "\n",
+    "* Docker volume is not created inside a container. Instead, a Docker volume is created separately from the container and can be mounted to one or more containers.\n",
+    "\n",
+    "* It is independent and can be associated with one or more containers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8285e73d",
+   "metadata": {},
+   "source": [
+    "### Advantages of Docker Volume\n",
+    "\n",
+    "* Volumes are easier to back up or migrate than bind mounts.\n",
+    "* You can manage volumes using Docker CLI commands or the Docker API.\n",
+    "* Volumes work on both Linux and Windows containers.\n",
+    "* Volumes can be more safely shared among multiple containers.\n",
+    "* Volume drivers let you store volumes on remote hosts or cloud providers, to encrypt the contents of volumes, or to add other functionality.\n",
+    "* New volumes can have their content pre-populated by a container.\n",
+    "* Volumes on Docker Desktop have much higher performance than bind mounts from Mac and Windows hosts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff34db4c",
+   "metadata": {},
+   "source": [
+    "### Commands\n",
+    "\n",
+    "* `docker volume create volume_name`: It is used to create volume.\n",
+    "* `docker volume ls`: It is used to list volumes.\n",
+    "* `docker volume inspect volume_name`: It is used to inspect volume.\n",
+    "* `docker volume rm volume_name`: It is used to remove volume.\n",
+    "* `docker volume prune`: It is used to remove all volumes.\n",
+    "* `docker run -d --name container_name -v volume_name:/app nginx`: It is used to start a container and create a volume if volume doesn't exists.\n",
+    "* `docker run -d --name container_name -v volume_name:/app:ro nginx`: It is used to start a container and create a read only volume if volume doesn't exists."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eafc796",
+   "metadata": {},
+   "source": [
+    "## Between Host and Container\n",
+    "\n",
+    "* We can share data between host to container without creating docker volume by directly mounting host directory to container directory.\n",
+    "\n",
+    "`docker run -itd --name python-c1 -v /local_path: /container_path python`\n",
+    "\n",
+    "`docker exec -it python-c1 bash`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2d0fb99",
+   "metadata": {},
+   "source": [
+    "## Between Containers\n",
+    "\n",
+    "To share a volume between two Docker containers, you can create a Docker volume and then mount it to both containers.\n",
+    "\n",
+    "![docker2](../image/docker/docker2.png)\n",
+    "\n",
+    "**Create Volume then mount to container**\n",
+    "\n",
+    "* `docker volume create myvol`\n",
+    "* `docker run --name c1 -itd -v myvol:/myapp python`\n",
+    "* `docker run --name c2 -itd -v myvol:/myapp1 python`\n",
+    "\n",
+    "\n",
+    "**Create Container with volume**\n",
+    "\n",
+    "* `docker run --name c1 -itd -v /myvol python`\n",
+    "* `docker run --name c2 -itd --volume-from c1 python`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9cec085",
+   "metadata": {},
+   "source": [
+    "## Volume with Dockerfile\n",
+    "\n",
+    "`FROM ubuntu`\n",
+    "`VOLUME [\"/data\"]`\n",
+    "\n",
+    "This line VOLUME /data in the Dockerfile is an instruction that tells Docker to create a mount point for a volume inside the conatiner. It specifies that the directory /data should be treated as a volume.\n",
+    "\n",
+    "It means that any data written to or read from the /data directory within the container will be stored outside the container in a volume.\n",
+    "\n",
+    "Note that the VOLUME instruction in the Dockerfile does not create the volume itself.\n",
+    "\n",
+    "It merely sets up the mount point within the container. THe actual volume created when you run the container and specify a volume name or path using the -v flag.\n",
+    "\n",
+    "Dockerfile\n",
+    "\n",
+    "        FROM ubuntu\n",
+    "        VOLUME [\"/data\"]\n",
+    "\n",
+    "* `docker build -t myimage .`\n",
+    "* `docker run --name c1 -itd -v myvol:/data myimage`\n",
+    "* `docker run --name c2 -itd --volume-from c1 myimage`"
+   ]
   }
  ],
  "metadata": {
