--- a/docs/Celery.ipynb
+++ b/docs/Celery.ipynb
@@ -143,6 +143,48 @@
     "\n",
     "* If you use the --concurrency option without specifying a --pool, Celery will use the default Prefork pool."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96417c66",
+   "metadata": {},
+   "source": [
+    "## What is Pool\n",
+    "\n",
+    "* In Celery, a pool is a mechanism used to manage the execution of tasks by controlling the number of worker processes available for task processing.\n",
+    "\n",
+    "* It allows you to specify how concurrent task execution should be managed and how worker processes are allocated and utilized.\n",
+    "\n",
+    "* The pool can be configured to optimize the performance and resource utlization of the Celery worker.\n",
+    "\n",
+    "* Some common pool implementations in Celery are prefork, threads, solo, gevent, eventlet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41a46fd3",
+   "metadata": {},
+   "source": [
+    "### Pools\n",
+    "\n",
+    "* **Prefork** :- The Prefork is the default pool in Celery. It precreates a fixed number of worker processes when the Celery worker starts, and each worker process can handle one task at a time. Tasks are distributed to available worker processes in round-robin fashion.\n",
+    "\n",
+    "* **Thread** :- The Threads uses threads instead of separate processes for concurrency. It is suitable for I/O-bound tasks where threads can be more efficient than separate processes. Each worker thread can handle one task at a time.\n",
+    "\n",
+    "* **Solo** :- The Solo is a special pool that runs a single worker process without any concurrency. It is useful when you want to limit task execution to one task at a time making it easier to ensure that tasks are executed sequentially.\n",
+    "\n",
+    "* **Gevent** :- The Gevent is an asynchronous pool that uses greenlets from the Gevent library for concurrency. It is a good option for applications that heavily rely on I/O operations. Greenlets are lighter than threads or processes and are suitable for I/O-bound tasks.\n",
+    "\n",
+    "* **Eventlet** :- Similar to the Gevent, the Eventlet uses greenlets from the Eventlet library for concurrency. It offers similar benefits for I/O-bound tasks.\n",
+    "\n",
+    "* `celery -A project_name worker -l INFO --pool=gevent`\n",
+    "\n",
+    "* The --pool option allows you to explicitly specify the type of pool to use for concurrency.\n",
+    "\n",
+    "* The pool determines how worker processes or threads are managed and how tasks are distributed among them.\n",
+    "\n",
+    "* If you use the --pool option, it overridees the default Prefork pool selection, and Celery will use the specified pool implementation."
+   ]
   }
  ],
  "metadata": {
