--- a/docs/Docker.ipynb
+++ b/docs/Docker.ipynb
@@ -275,6 +275,118 @@
     "* `docker run --name c1 -itd -v myvol:/data myimage`\n",
     "* `docker run --name c2 -itd --volume-from c1 myimage`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1ff1376",
+   "metadata": {},
+   "source": [
+    "## What is Docker Networking\n",
+    "\n",
+    "Docker networking is a fundamental aspect of Docker that enables communication between Docker containers and external networks. It allows you to connect containers together, as well as connect containers to the host machine and other external resources.\n",
+    "\n",
+    "A container has no information about what kind of network it's attached to, or whether their peers are also Docker workloads or not.\n",
+    "\n",
+    "A container only sees a network interface with an IP address, a gateway, a routing table, DNS services, and other networking details.\n",
+    "\n",
+    "By default, when you create or run a container using create or docker run, the container doesn't expose any of its ports to the outside world.\n",
+    "\n",
+    "Use the --publish or -p flag to make a port available to services outside of Docker. This creates a firewall rule in the host, mapping a container port to a port on the Docker host to the outside world."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7de2f188",
+   "metadata": {},
+   "source": [
+    "### Network Drivers\n",
+    "\n",
+    "* **bridge** :- The default bridge network is good for running containers that don't require special networking capabilities. User-defined bridge networks enable containers on the same Docker host to communicate with each other. A user-defined network typically defines an isolated network for multiple conatiners belonging to a common project or component.\n",
+    "\n",
+    "* **host** :- Host network shares the host's netwokr with the container. When you use this driver, the container's network isn't isolated from the host.\n",
+    "\n",
+    "* **overlay** :- Overlay network are best when you need containers running on different Docker hosts to communicate, or when multiple applications work together using Swarm services.\n",
+    "\n",
+    "* **macvlan** :- Macvlan networks are best when you are migrating from a VC setup or need your container to look like physical hosts on your network, each with a unique MAC address.\n",
+    "\n",
+    "* **ipvlan** :- IPvlan is similar to Macvlan, but doesn't assign unique MAC addresses to containers. Consider using IPvlan when there's a restriction on the number of MAC addresses that can be assigned to a network interface or port.\n",
+    "\n",
+    "* **none** :- No Networking\n",
+    "\n",
+    "* Network plugins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73314556",
+   "metadata": {},
+   "source": [
+    "### Bridge Network Drivers\n",
+    "\n",
+    "In terms of Docker, a bridge network uses a software bridge which allows containers connected to the same bridge network to communicate, while providing isolation from containers which are not connected to that bridge network.\n",
+    "\n",
+    "The Docker bridge driver automatically installs rules in the host machine so that containers on different bridge networks cannot communicate directly with each other.\n",
+    "\n",
+    "Bridge network apply to containers running on the same Docker daemon host.\n",
+    "\n",
+    "When you start Docker, a default bridge network (also called bridge) is created automatically, and newly-started containers connect to it unless otherwise specified.\n",
+    "\n",
+    "### Default Bridge Network\n",
+    "\n",
+    "![docker3](../image/docker/docker3.png)\n",
+    "\n",
+    "* Containers can communicate to each other.\n",
+    "* Container and Host can communicate via bridge\n",
+    "* Containers can only communicate by IP address, not by container name.\n",
+    "\n",
+    "### User-defined Bridge Network\n",
+    "\n",
+    "![docker4](../image/docker/docker4.png)\n",
+    "\n",
+    "* Possible to achieve isolation of container.\n",
+    "* C1 and C2 can communicate to each other and to Host via bridge default.\n",
+    "* C3 can't communicate to C1 and C2 but can communicate to Host via bridge net1.\n",
+    "* Containers can communicate by IP address & also resolve a container name to an IP address. This capability called automatic service discovery.\n",
+    "\n",
+    "### Commands\n",
+    "\n",
+    "* `docker network ls`: It is used to list all networks. Bridge is the default network.\n",
+    "* `docker network inspect bridge`: It is used to inspect bridge network to see what containers are connected to it.\n",
+    "* `docker network create --driver bridge network_name`: It is used to create user-defined bridge network.\n",
+    "* `docker network inspect network_name`: It is used to inspect network.\n",
+    "* `docker run --name container_name -itd --network_name alpine`: It is used to connect a container to a specified network e.g. host, user-defined bridge.\n",
+    "* `docker network connect container_name network_name`: It is used to connect a running container to an existing user-defined bridge.\n",
+    "* `docker network disconnect container_name network_name`: It is used to connect a disconnect a running container to an existing user-defined bridge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59427bff",
+   "metadata": {},
+   "source": [
+    "### Host Network\n",
+    "\n",
+    "![docker5](../image/docker/docker5.png)\n",
+    "\n",
+    "* It allows a container to use the networking stack of the host machine directly.\n",
+    "* The container shares the host's network namespace, and the container processes can bind to host ports directly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ae61097",
+   "metadata": {},
+   "source": [
+    "### Overlay Network\n",
+    "\n",
+    "![docker6](../image/docker/docker6.png)\n",
+    "\n",
+    "Overlay networks enable communication betwenn Docker containers running on different Hosts.\n",
+    "\n",
+    "They are particularly useful in distributed or clustered setups where containers span multiple machines.\n",
+    "\n",
+    "Overlay networks require a container orchestration tool, such as Docker Swarm or Kubernetes, to manage the network across multiple hosts."
+   ]
   }
  ],
  "metadata": {
