--- a/docs/Redis (Pub Sub).ipynb
+++ b/docs/Redis (Pub Sub).ipynb
@@ -57,6 +57,61 @@
     "* **PUBSUB NUMSUB**:- It returns the number of subscribers (exclusive of clients subscribed to patterns) for the specified channels.\n",
     "* **PUNSUBSCRIBE** :- It is used to unsubscribes the client from the given patterns, or from all of them if none is given.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08353710-543b-45ef-8ca8-b1437b01987d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import redis\n",
+    "import json\n",
+    "\n",
+    "client = redis.StrictRedis(\n",
+    "    host='localhost',\n",
+    "    port=6379,\n",
+    "    password='XXXXXX'\n",
+    ")\n",
+    "\n",
+    "def publish_message(message):\n",
+    "    \"\"\" \n",
+    "    Publishes a message to the Redis channel.\n",
+    "    \"\"\"\n",
+    "    r.publish(topic, json.dumps(message))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb6df9d1-4941-494b-adde-a2b57d96661d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subscribe_messages():\n",
+    "    \"\"\"\n",
+    "    Listens for messages on the Redis channel.\n",
+    "    \"\"\" \n",
+    "    pubsub = client.pubsub()\n",
+    "    pubsub.subscribe(topic)\n",
+    "\n",
+    "    for m in pubsub.listen():\n",
+    "        if m['type'] == 'message':\n",
+    "            message = json.loads(m['data']) \n",
+    "            print(f'Received message: {message}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3684f81-bef2-4958-a67f-88eebcf5542b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open two separate python consoles to run publisher & subscriber\n",
+    "publish_message({'user': 'John', 'text': 'Hi!'})\n",
+    "subscribe_messages()"
+   ]
   }
  ],
  "metadata": {
@@ -75,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
